Made infinite scrolling into a component.

--- a/client/templates/html/invoices.html
+++ b/client/templates/html/invoices.html
@@ -22,9 +22,5 @@
         {{/each}}
         </tbody>
     </table>
-    {{#if moreResults}}
-        <div id="showMoreResults" style="margin-left: 25px;">
-            <span class="loading">Loading...</span>
-        </div>
-    {{/if}}
+    {{> infiniteScrolling debounceTimer=100 increment=increment visibility=isVisible varToIncrease=increaseLimit}}
 </template>
