New custom search component

--- a/client/templates/html/invoices.html
+++ b/client/templates/html/invoices.html
@@ -8,6 +8,7 @@
     <button type="button" name="all" class="btn btn-filter all btn-default">All</button>
     <button type="button" class="btn generate btn-info">GENERATE</button>
     <button type="button" class="btn resetQuery btn-warning">Reset Filters</button>
+    {{> searchBoxCustom searchAllowedData=searchAllowedData eventName="parseSearchFilter"}}
     <table class="table table-striped">
         <thead>
         <tr>
