Fixed sorting by clicking tableheader

--- a/client/templates/html/invoices.html
+++ b/client/templates/html/invoices.html
@@ -11,9 +11,9 @@
     <table class="table table-striped">
         <thead>
         <tr>
-            <th class="sort" name="sortInvoiceNr">Invoice Nr.<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortInvoiceNr}}"></span></th>
-            <th class="sort" name="sortTotal">total<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortTotal}}"></span></th>
-            <th class="sort" name="sortCreatedAt">createdAt<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortCreatedAt}}"></span></th>
+            <th class="sort" data-name="sortInvoiceNr">Invoice Nr.<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortInvoiceNr}}"></span></th>
+            <th class="sort" data-name="sortTotal">total<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortTotal}}"></span></th>
+            <th class="sort" data-name="sortCreatedAt">createdAt<span class="glyphicon glyphicon-chevron-{{direction queryParams.sortCreatedAt}}"></span></th>
         </tr>
         </thead>
         <tbody>
