added extra class to button

--- a/client/components/search/template/addSearchOption.html
+++ b/client/components/search/template/addSearchOption.html
@@ -1,5 +1,5 @@
 <template name="addSearchOption">
-    <button class="addSearchOption" value="Add Search Option">Add Search Option</button>
+    <button class="btn addSearchOption" value="Add Search Option">Add Search Option</button>
     <div class="searchOptions" style="display: none">
         <h2>Add search option by</h2>
         {{#each searchAllowedData}}
