--- a/client/components/filter/template/filterButton.html
+++ b/client/components/filter/template/filterButton.html
@@ -1,3 +1,3 @@
 <template name="filterButton">
-    <button type="button" name="{{data.name}}" class="btn btn-filter btn-{{data.buttonType}}">{{data.label}}</button>
+    <button type="button" name="{{data.name}}" class="btn {{#if isActive active data.name}}active{{/if}} btn-filter btn-{{data.buttonType}}">{{data.label}}</button>
 </template>
